# neoxide

./: Cargo.toml  LICENSE  README.md  log.neo2
src/: core.rs  lib.rs  main.rs
src/core/: editor.rs  event_handling.rs  input.rs  io.rs  lib.rs  logger.rs  render.rs
src/core/editor/: motions.rs
src/core/render/: border.rs  manager.rs
src/core/render/border/: param_structs.rs
src/core/render/manager/: builtin_layouts.rs
