[package]
name = "neoxide"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
tokio = { version = "1.39.3", features = ["full"] }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
once_cell = "1.19.0"
async-trait = "0.1.81"
downcast-rs = "1.2.1"
